<resources>
    <string name="app_name">Flex - Gasolina ou Etanol</string>
    <string name="list_cars_toolbar">Meus carros</string>
    <string name="etanol">Etanol</string>
    <string name="gasolina">Gasolina</string>
    <string name="mileage_consumption">Consumo por quilometragem</string>
    <string name="value_gasoline">Valor do litro de gasolina</string>
    <string name="value_ethanol">Valor do litro de etanol</string>
    <string name="result">Resultado</string>
    <string name="img_desc">Banner</string>
    <string name="instruc_login"><b>LOGIN</b>
        \n\n<i>Faça o login clicando no botão abaixo, é rápido e fácil.</i></string>

    <!-- Botões -->
    <string name="button_google">Entrar com Google</string>
    <string name="calculate">Calcular</string>

    <!-- Snackbar Messages -->

    <string name="google_sign_in_error">Falha ao logar com e-mail Google.</string>
    <string name="authenticator_failed">Falha ao tentar autenticar.</string>
    <string name="logout_message">Deslogado com sucesso.</string>

    <!-- Toast Messages -->
    <string name="press_back">Pressione novamente para sair</string>

    <!-- TextInputLayout Error -->
    <string name="ethanol_consum_error">Preencha o valor do consumo de etanol por quilometragem</string>
    <string name="gasoline_consum_error">Preencha o valor do consumo de gasolina por quilometragem</string>
    <string name="ethanol_price_error">Preencha o valor do litro de etanol</string>
    <string name="gasoline_price_error">Preencha o valor do litro de gasolina</string>
    <string name="name_car_error">Preencha o nome do carro</string>

    <!-- Helper Text -->
    <string name="name_car_helper">Exemplo: Honda Civic</string>
    <string name="gasoline_consum_helper">Exemplo: 10.5</string>
    <string name="ethanol_consum_helper">Exemplo: 7.3</string>

    <!-- Alerts Dialogs -->
    <string name="text_yes">Sim</string>
    <string name="text_no">Não</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_save">Salvar</string>
    <string name="exit_question">Deseja realmente sair?</string>
    <string name="how_calc_consumption">Como calcular o consumo de combustível?</string>
    <string name="how_calc_consumption_info">O primeiro passo para descobrir o quanto seu carro
        gasta é abastecer o tanque. Com o tanque cheio, zere o hodômetro parcial,
        localizado no painel. Use o carro normalmente e no próximo abastecimento confira na bomba
        do posto a quantidade exata de litros que entrou no carro. Para calcular a média
        em quilômetros por litro, basta dividir os quilômetros percorridos pela quantidade
        de litros que a bomba marca no segundo abastecimento. Por exemplo, se você rodou 450
        quilômetros e no abastecimento precisou colocar 32 litros para completar o tanque,
        a média será de 14,06 (450 dividido por 32).
        \n\nO consumo pode variar em trechos urbanos e de estrada. O modo como o motorista conduz
        o veículo também pode ser um diferencial. Para conseguir melhores marcas, evite trocar de
        marcha com o giro muito alto e acelerar o carro enquanto o mesmo estiver parado.
        \n\nÉ importante ficar atento a um detalhe.
        \nAo abastecer o carro para fazer a conta, fique atento ao “clique” da bomba de combustível.
        Ela indica que o tanque já está cheio. Não deixe que o frentista encha o tanque até a
        boca no modo manual.</string>
    <string name="add_car">Adicionar carro</string>
    <string name="name_car">Nome do carro</string>
    <string name="gas_car_consum">Consumo de gasolina por quilometragem</string>
    <string name="etha_car_consum">Consumo de etanol por quilometragem</string>

    <!-- Menu -->
    <string name="my_cars">Meus carros</string>
    <string name="calc_consumption">Como calcular o consumo?</string>
    <string name="logout">Desconectar</string>
</resources>
